Fixed upload on mobile, added loading spinner

--- a/webroot/css/mobile.css
+++ b/webroot/css/mobile.css
@@ -65,6 +65,10 @@ section article {
 	padding: 5px;
 }
 
+.upload-slide section {
+	margin-top: 0;
+}
+
 /*= Video Player
 ************************************/
 .mejs-container,
